--- a/src/App.css
+++ b/src/App.css
@@ -387,12 +387,72 @@ a.active::before {
 
 
 
+/* blog main */
+.blogBanner {
+  overflow: hidden;
+  position: relative;
+  min-height: 85vh;
+  background: url('https://i.pinimg.com/originals/3b/00/18/3b0018122edcf17012b42d8f200cd228.jpg') no-repeat fixed center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.blogTitle{
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.blogContent{
+  padding: 100px;
+  margin: 20px;
+  border: 1px solid rgba(91, 91, 91, 0.29);
+
+  font-weight: 300;
+}
+
+.social{
+  display: flex;
+ 
+  gap: 10px;
+  
+}
+
+.padding{
+  /* padding: 100px; */
+  margin-left: 60px;
+  margin-bottom: 60px;
+  padding-bottom: 60px;
+}
+
+.socialIcon{
+  width: 30px;
+  height: 30px;
+  border:1px solid rgba(201, 196, 255, 0.741);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.socialIcon:hover{
+  background-color: rgba(118, 106, 184, 0.29);
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
 
 
 
 
 
 
+hr{
+  border: 1px solid rgba(150, 150, 150, 0.29);
+
+}
 .divider {
   width: 100%;
   height: 1px;
@@ -420,7 +480,9 @@ a.active::before {
 .uppercase{
   text-transform: uppercase;
 }
-
+.text-white {
+  color: white;
+}
 
 
 .w-full {
@@ -457,4 +519,19 @@ a.active::before {
 
 .py-10 {
   padding: 20px 0;
+}
+
+.w-10{
+  width: 10%;
+}
+.w-20{
+  width: 20%;
+}
+
+.h-10{
+  height: 10%;
+}
+
+.h-20{
+  height: 20%;
 }
