--- a/src/pages/LoginForm.css
+++ b/src/pages/LoginForm.css
@@ -1,158 +1,174 @@
-.title {
-  color:  rgb(61, 59, 59);
-  text-align: left;
-  margin-bottom: 20px;
-  font-size: medium;
+#background{
+  z-index: 1;
+  position: fixed;
+  min-height: 100vh;
+  min-width: 100%;
+  background-color: rgba(0, 0, 0,0.85);
+  display: none;
+  flex-direction: column;
+  align-items: center;
 }
-
-.subtitle {
-  color: rgb(61, 59, 59);
-  text-align: left;
-  /* margin-bottom: 3rem; */
-}
-
-.inputs_container {
+#login-popup{
   display: flex;
   flex-direction: column;
+  background-color: white;
+  height: 89vh;
+  padding: 10px 26px;
+  width: 19vw;
+  line-height: 26px;
+  margin-top: 4vh;
+  border-radius: 3px;
 }
-
-/* .inputs_container input {
-  width: 90%;
-  margin: 1rem auto;
-  padding: 0.8rem;
-  border-radius: 5px;
-  font-size: 1rem;
-  font-family: inherit;
-  outline: 0;
-  border: 1px solid ;
-  height: 15px;
-} */
-input[type=text], input[type=password] {
+#popuphide{
+  display: flex;
+  justify-content: flex-end;
+  cursor: pointer;
+}
+#logintitle{
+  font-size: 22px;
+  font-weight: 200;
+  margin-top: 4px;
+  margin-bottom: 18px;
+}
+#newbie{
+  font-size: 17px;
+  font-weight: 300;
+  color: grey;
+}
+#newbie span{
+  cursor: pointer;
+  color: rgb(29, 29, 29);
+}
+#popup-login-form{
+  height: 220px;
+  margin-top: 20px;
+  font-size: 17px;
+  font-weight: 300;
+  color: rgb(29, 29, 29);
+  border-bottom: 1px solid #D5D9DD;
+}
+.popup-form input{
+  margin-top: 5px;
+  width: calc(100% - 32px);
+  height: 36px;
+  border: 1px solid #D5D9DD;
+  border-radius: 3px;
+  padding: 0px 16px;
+}
+.popup-buttons{
+  margin-top: 30px;
   width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: #f1f1f1;
-}
-
-.login_button {
-  display: block;
-  margin: 3rem auto 1rem auto;
-  width: 97%;
-  padding: 0.75rem 0.7rem;
-  border-radius: 5px;
-  outline: 0;
-  font-size: 1rem;
-  font-family: inherit;
-  cursor: pointer;
-  background-color: #030c47;
-  color: white;
-  border: 2px solid transparent;
-  margin-top: 0px;
-}
-.facebook{
-  display: block;
-  margin: 3rem auto 1rem auto;
-  width: 90%;
-  padding: 0rem 0.7rem;
-  border-radius: 5px;
-  outline: 0;
-  font-size: 1rem;
-  font-family: inherit;
-  cursor: pointer;
-  background-color: #09a59d;
-  color: white;
-  border: 2px solid transparent;
-  margin-top: 0px;
-
-  
-}
-.google{
-  display: block;
-  margin: 3rem auto 1rem auto;
-  width: 96%;
-  padding: 0.6rem 0.7rem;
-  border-radius: 5px;
-  outline: 0;
-  font-size: 1rem;
-  font-family: inherit;
-  cursor: pointer;
-  background-color: #ee1d51;
-  color: white;
-  border: 2px solid transparent;
-  margin-top: 0px;
-}
-
-
-
-.login_button:hover {
-  border: 1px solid #4e65f7;
- 
-}
-.google:hover{
-  border: 1px solid #4e65f7;
-  
-}
-.facebook:hover{
-  
-  
-}
-.link_container {
-  display: flex;
-  justify-content: center;
-}
-
-.small {
-  color: rgb(51, 50, 50);
   text-align: center;
-  font-size: 0.85rem;
-  /*text-decoration: underline;*/
-  margin-bottom: 0rem;
-  cursor: pointer;
-  
-}
-
-.icons {
-  display: flex;
-  justify-content: center;
-  gap: 1.5rem;
-}
-
-.icon {
+  padding: 12px 0px;
+  background-color: #011640;
+  border: none;
   color: white;
+  font-size: 13px;
+  font-weight: 300;
+  border-radius: 3px;
   cursor: pointer;
 }
-
-/* .error_msg {
-  color: red;
-  padding-left: 1rem;
-  font-size: 0.85rem;
-  margin: 0;
-} */
-
-@media only screen and (max-width: 620px) {
-  .inputs_container input {
-    width: 100%;
-    
-  }
-
-  .login_button {
-    width: 100%;
-  
-  }
-
-  /* .error_msg {
-    padding-left: 0.2rem;
-  } */
+#login-with-fb{
+  height: 40px;
+  width: 100%;
+  background-color: #1877F2;
+  color: white;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  font-size: 13px;
+  margin-top: 16px;
+  border-radius: 3px;
+  cursor: pointer;
 }
-
-@media only screen and (max-height: 670px) {
-  .subtitle {
-    margin-bottom: 2rem;
-  }
-
-  .small {
-    margin-bottom: 3rem;
-  }
+.fb-google-icon{
+  font-size: 20px;
+  margin-left: 8px;
+  border-radius: 3px;
+}
+#login-with-fb span{
+  width: calc(100% - 28px);
+  text-align: center;
+}
+#login-with-google{
+  height: 40px;
+  width: 100%;
+  background-color: #C63D2D;
+  color: white;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  font-size: 13px;
+  margin-top: 16px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+#login-with-google span{
+  width: calc(100% - 28px);
+  text-align: center;
+}
+#forget{
+  margin-top: 40px;
+  font-size: 12px;
+  font-weight: 300;
+  cursor: pointer;
+}
+#create-account-popup{
+  display: none;
+  flex-direction: column;
+  background-color: white;
+  height: 90vh;
+  padding: 10px 26px;
+  width: 19vw;
+  line-height: 26px;
+  margin-top: 4vh;
+  border-radius: 3px;
+}
+#popup-newbie-form{
+  height: fit-content;
+  margin-top: 20px;
+  font-size: 17px;
+  font-weight: 300;
+  color: rgb(29, 29, 29);
+}
+#popup-newbie-form .newbie-double{
+  display: flex;
+  gap: 7px;
+}
+#popup-newbie-form span{
+  color: red;
+}
+#terms-label{
+  color: grey;
+  margin-top: 10px;margin-left: 4px;
+  font-size: 15px;
+}
+#popup-newbie-form #terms{
+  color: black;
+}
+#popup-newbie-form #terms:hover{
+  color: grey;
+  cursor: pointer;
+}
+#acception{
+  display: flex;
+}
+#accept-checkbox{
+  width: 14px;
+}
+#forgot-password-popup{
+  display: none;
+  height: 47vh;
+  flex-direction: column;
+  background-color: white;
+  padding: 10px 26px;
+  width: 19vw;
+  line-height: 26px;
+  margin-top: 4vh;
+  border-radius: 3px;
+}
+#forgot-password-form{
+  margin-top: 20px;
+  font-size: 17px;
+  font-weight: 300;
 }
