dashboard add new

--- a/src/layout/sideBar/sidebar.css
+++ b/src/layout/sideBar/sidebar.css
@@ -27,12 +27,26 @@
 }
 
 .sidebarListItem {
-  padding: 5px;
+  padding: 15px;
   cursor: pointer;
   display: flex;
   align-items: center;
   border-radius: 10px;
+  font-size: smaller;
+  color: black;
 }
+.sidebarListItem span{
+  color:white;
+  background-color: #3270FC;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 8px;
+  border-radius: 5px;
+}
+.sidebarListItem Link{
+  color:black
+}
+
 
 .sidebarListItem.active,
 .sidebarListItem:hover {
@@ -42,4 +56,5 @@
 .sidebarIcon{
     margin-right: 5px;
     font-size: 20px !important;
+    color: #3270FC;
 }
