--- a/src/layout/topBar/topbar.css
+++ b/src/layout/topBar/topbar.css
@@ -58,18 +58,29 @@
 
 .searchContainer {
   position: relative;
+ 
 }
 
 .searchContainer svg {
   position: absolute;
   top: 35%;
-  left: 30px;
+  left: 40px;
   font-size: 20px;
+  color:#4D83FC;
+  width: 14px;
 }
 
 .searchContainer input {
   border-radius: 1000px;
   padding-left: 70px;
+  background-color: #F5F7FB;
+  height: 40px;
+  width: 140px;
+
+}
+.searchContainer input::placeholder {
+  color:#2E5782;
+  font-size:12px
 }
 
 /* nav styles */
@@ -90,6 +101,8 @@ div.primary-navigation ul li {
   position: relative;
   text-decoration: none;
   text-align: center;
+  font-size: 13px;
+  color:#3ca0e7
 }
 
 div.primary-navigation li a {
