--- a/src/layout/topBar/topbar.css
+++ b/src/layout/topBar/topbar.css
@@ -40,7 +40,7 @@
   position: absolute;
   top: -5px;
   right: 0px;
-  background-color: red;
+  background-color: #4D83FC;
   color: white;
   border-radius: 50%;
   display: flex;
@@ -63,8 +63,8 @@
 
 .searchContainer svg {
   position: absolute;
-  top: 35%;
-  left: 40px;
+  top: 15%;
+  left: 35px;
   font-size: 20px;
   color:#4D83FC;
   width: 14px;
@@ -74,13 +74,13 @@
   border-radius: 1000px;
   padding-left: 70px;
   background-color: #F5F7FB;
-  height: 40px;
+  height: 30px;
   width: 140px;
 
 }
 .searchContainer input::placeholder {
   color:#2E5782;
-  font-size:12px
+  font-size:12px;
 }
 
 /* nav styles */
@@ -161,4 +161,11 @@ a:hover {
 
 ul li ul li a {
   transition: all 0.5s ease;
+}
+.bg-custom-1 {
+  background-color: #85144b;
+}
+
+.bg-custom-2 {
+background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
 }
