--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@ a.active::before {
   width: 100%;
   height: 4px;
   bottom: 0;
-  background-color: rgb(0, 19, 82);
+  /* background-color: rgb(0, 19, 82); */
 }
 
 
