--- a/src/Components/addNew/addNew.css
+++ b/src/Components/addNew/addNew.css
@@ -69,7 +69,7 @@
     padding-left: 50px;
     border: 0;
     border: 1px solid #dbdbdb;
-    color: #c2c2c2;
+    color: black;
     font-size: 14px;
     border-radius: 7px;
 }
