--- a/src/Components/dashboard/style.css
+++ b/src/Components/dashboard/style.css
@@ -53,7 +53,7 @@
     font-weight: 400;
 }
 #statistic-chart{
-    background: url("../img/cap1.png");
+    /* background: url("../img/cap1.png"); */
     background-position: center;
     background-size: cover;
     height: 300px;
