--- a/src/Components/myListings/style.css
+++ b/src/Components/myListings/style.css
@@ -11,7 +11,7 @@
 }
 
 #listing-card-image{
-    /* background: url("https://homeradar.kwst.net/images/all/1.jpg"); */
+    background: url("https://d37ukvrrv3in12.cloudfront.net/listings/2f0059e5-0c4c-4ba0-89e9-31ca11a107eb/xl/0.jpg");
     background-position: center;
     background-size: cover;
     height: 150px;
