--- a/src/Components/dashboard/style.css
+++ b/src/Components/dashboard/style.css
@@ -55,11 +55,13 @@
 #statistic-chart{
     background-position: center;
     background-size: cover;
-    height: 300px;
+    height: 400px;
+    background-color: #132737;
     width: 100%;
     border-radius: 3px;
     margin-top: 30px;
 }
+
 #last-activities{
     width: calc(100% - 160px);
     margin-left: 80px;
